--- a/index.html
+++ b/index.html
@@ -8,6 +8,34 @@
 </head>
 <body>
 
+    <header>
+        <h1>My Rental Website</h1>
+    </header>
+
+    <section class="property-listing">
+        <article class="property">
+            <img src="property1.jpg" alt="Property 1">
+            <h2>Beautiful House</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <button>Book Now</button>
+        </article>
+
+        <article class="property">
+            <img src="property2.jpg" alt="Property 2">
+            <h2>Cozy Apartment</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <button>Book Now</button>
+        </article>
+
+        <!-- Add more property articles as needed -->
+    </section>
+
+    <footer>
+        <p>&copy; 2023 My Rental Website</p>
+    </footer>
+</body>
+</html>
+
 
 
 
