ADDED IMAGE TO PAGE

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
 
     <header>
-        <h1>My Rental Website</h1>
+        <h1>AIR COPY CAT</h1>
     </header>
 
     <section class="property-listing">
         <article class="property">
-            <img src="property1.jpg" alt="Property 1">
+            <img src="image/chair.webp" alt="Property 1">
             <h2>Beautiful House</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <button>Book Now</button>
