--- a/index.html
+++ b/index.html
@@ -4,7 +4,45 @@
     <meta charset="UTF-8">
     <title>COPYCAT</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="main.css"> 
+    <link rel="stylesheet" href="main.css">
+    <title>Simple Navbar</title>
+    <style>
+      body {
+        margin: 0;
+        font-family: Arial, sans-serif;
+      }
+  
+      nav {
+        background-color: #333;
+        overflow: hidden;
+      }
+  
+      nav a {
+        float: left;
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+  
+      nav a:hover {
+        background-color: #ddd;
+        color: black;
+      }
+    </style>
+  </head>
+  <body>
+  
+    <nav>
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+    </nav>
+  
+    <!-- Your page content goes here -->
+  
+  </body>
+  </html> 
 </head>
 <body>
 
